force-app/main/default/objects/ProductSettings__c/ProductSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Product settings used for ProductReferential or ProductCatalogue objects (not possible by Custom Metadata Type with Formula fields)</description>
    <label>Product Settings</label>
</CustomObject>