force-app/main/default/objects/ProductSettings__c/fields/BccExtraSmallPictureUrl__c.field-meta.xml
<CustomField>
    <fullName>BccExtraSmallPictureUrl__c</fullName>
    <description>Absolute path to get BCC URL to display extra-small pictures (for example 15ko) (used in formula fields in ProductCatalogue__c)
For example: &apos;http://louisvuitton.com/images/is/image/lv/1/PP_VP_S/&apos; + file name (louis-vuitton--M44062_PM2_Front view.jpg)</description>
    <label>Bcc Extra-Small Picture Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>