force-app/main/default/objects/ProductSettings__c/fields/BccLargePictureUrl__c.field-meta.xml
<CustomField>
    <fullName>BccLargePictureUrl__c</fullName>
    <description>Absolute path to get BCC URL to display large pictures (for example 700ko) (used in formula fields in ProductCatalogue__c)
For example: &apos;http://louisvuitton.com/images/is/image/lv/1/PP_VP_L/&apos; + file name (louis-vuitton--M44062_PM2_Front view.jpg)</description>
    <label>Bcc Large Picture Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>