force-app/main/default/objects/ProductSettings__c/fields/BccMediumPictureUrl__c.field-meta.xml
<CustomField>
    <fullName>BccMediumPictureUrl__c</fullName>
    <description>Absolute path to get BCC URL to display medium pictures (for example 200ko) (used in formula fields in ProductCatalogue__c)
For example: &apos;http://louisvuitton.com/images/is/image/lv/1/PP_VP_M/&apos; + file name (louis-vuitton--M44062_PM2_Front view.jpg)</description>
    <label>Bcc Medium Picture Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>