force-app/main/default/objects/ProductSettings__c/fields/BccSmallPictureUrl__c.field-meta.xml
<CustomField>
    <fullName>BccSmallPictureUrl__c</fullName>
    <description>Absolute path to get BCC URL to display small pictures (for example 50ko) (used in formula fields in ProductCatalogue__c)
For example: &apos;http://louisvuitton.com/images/is/image/lv/1/PP_VP_AS/&apos; + file name (louis-vuitton--M44062_PM2_Front view.jpg)</description>
    <label>Bcc Small Picture Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>