force-app/main/default/objects/ProductSettings__c/fields/Fluid_Products_URL__c.field-meta.xml
<CustomField>
    <fullName>Fluid_Products_URL__c</fullName>
    <defaultValue>&quot;https://configure-published.fluidretail.net/prod/qa/customers/c1562/configureHtml/products&quot;</defaultValue>
    <label>Fluid Products URL</label>
    <type>Url</type>
</CustomField>