force-app/main/default/objects/ProductSettings__c/fields/Fluid_Products_URL_China__c.field-meta.xml
<CustomField>
    <fullName>Fluid_Products_URL_China__c</fullName>
    <label>Fluid Products URL (China)</label>
    <type>Url</type>
</CustomField>