force-app/main/default/objects/ProductSettings__c/fields/FluidApiKey__c.field-meta.xml
<CustomField>
    <fullName>FluidApiKey__c</fullName>
    <label>Fluid API Key</label>
    <length>20</length>
    <type>Text</type>
</CustomField>