force-app/main/default/objects/ProductSettings__c/fields/FluidApiLocale__c.field-meta.xml
<CustomField>
    <fullName>FluidApiLocale__c</fullName>
    <defaultValue>&quot;en_US&quot;</defaultValue>
    <label>Fluid API Locale</label>
    <length>20</length>
    <type>Text</type>
</CustomField>