force-app/main/default/objects/ProductSettings__c/fields/FluidApiUrl__c.field-meta.xml
<CustomField>
    <fullName>FluidApiUrl__c</fullName>
    <defaultValue>&quot;https://configure-api.fluidretail.net/recipe/&quot;</defaultValue>
    <description>URL prefix to get Product data.</description>
    <label>Fluid API URL</label>
    <type>Url</type>
</CustomField>