force-app/main/default/objects/ProductSettings__c/fields/FluidPictureUrl__c.field-meta.xml
<CustomField>
    <fullName>FluidPictureUrl__c</fullName>
    <description>Absolute path to get Fluid URL to display pictures (used in formula fields in Productatalogue__c, Favorite__c)
For example: &apos;https://configure-imagecomposer.fluidretail.net/recipe/&apos; + (recipe id) 33858728 + &apos;/image/&apos; + Front.jpg</description>
    <label>Fluid Picture Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>