force-app/main/default/objects/ProductSettings__c/fields/ProductCarouselWidth__c.field-meta.xml
<CustomField>
    <fullName>ProductCarouselWidth__c</fullName>
    <defaultValue>400</defaultValue>
    <description>Holds the width of the carousel image on the creation home page (used in ProductTile bundle)</description>
    <label>ProductCarouselWidth</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>