force-app/main/default/objects/ProductSettings__c/fields/ProductTileWidth__c.field-meta.xml
<CustomField>
    <fullName>ProductTileWidth__c</fullName>
    <defaultValue>400</defaultValue>
    <description>holds the width of pictures on creation home page (used in ProductTile bundle)</description>
    <label>ProductTileWidth</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>