force-app/main/default/objects/ProductSettings__c/fields/Threekit_Alpha__c.field-meta.xml
<CustomField>
    <fullName>Threekit_Alpha__c</fullName>
    <label>Threekit_Alpha</label>
    <length>200</length>
    <type>Text</type>
</CustomField>