force-app/main/default/objects/ProductSettings__c/fields/Threekit_Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Threekit_Org_Id__c</fullName>
    <description>MIY-1969</description>
    <label>Threekit Org Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>